--- a/.env
+++ b/.env
@@ -1,2 +1,14 @@
+TG_API_ID=29057382
+TG_API_HASH=2f2c9c29bead1a6a6866251541227627
+phone=+251976642377
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=telegram
+DB_USER=postgres
+DB_PASSWORD=root
+
+bot_token=7676463052:AAHbFgkFUDR5-Js7MfXsxlx39TIzIlvI430
+
 AIRFLOW_IMAGE_NAME=apache/airflow:2.4.2
 AIRFLOW_UID=50000
