Load classification result ro database

--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ phone=+251976642377
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=telegram
+DB_NAME=Medical-Product
+# DB_NAME=telegram
 DB_USER=postgres
 DB_PASSWORD=root
 
