Airflow DAG execution

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@ data
 .venv
 logs
 .env
-dags/data
+# dags/data
 dags/.env
 script/scraping_session.session
 script/scraping.log
 # models
 YOLO_Classification_Bot/.env
+daily_scrap
